2004-01-16  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstpad.c: (gst_pad_alloc_buffer):
	  Return a newly allocated buffer when the pad has no peer.

2004-01-16  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstclock.c: (gst_clock_get_time):
	  make it compile with gcc 2.95 again.
	  Patch by Scott Wheeler

2004-01-15  David Schleef  <ds@schleef.org>

	* gst/gstcaps.h:
	Added gst_caps_is_simple() macro.
	* testsuite/caps/caps.c: (test1):
	* testsuite/caps/intersect2.c: (main):
	* testsuite/caps/intersection.c: (main):
	Fixes to make 'make check' work again after removing
	gst_caps_is_chained().

2004-01-15  Leif Johnson <leif@ambient.2y.net>

	* docs/random/uraeus/gstreamer_and_midi.txt: Rather large edits
	and additions to the MIDI document.

2004-01-15  David Schleef  <ds@schleef.org>

	* gst/gstelement.c: (gst_element_get_compatible_pad_filtered),
	(gst_element_link_pads_filtered): Use GST_PAD_ macros instead
	of GST_RPAD_, since we don't know if it's a real or ghost pad.

2004-01-15  David Schleef  <ds@schleef.org>

	* gst/gstqueue.c:
	* gst/gstqueue.h:
	Fix the spelling of "treshold" and make min_threshold actually
	affect the queue.

2004-01-15  David Schleef  <ds@schleef.org>

	* gst/gstcaps.c:
	Add lots of documentation.
	* gst/gstcaps.h:
	Deprecate a few functions.
	* gst/gstpad.c:
	Removed use of deprecated functions.

2004-01-15  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstpad.c: (gst_pad_is_linked):
	* gst/gstpad.h:
	  implement gst_pad_is_linked
	* gst/gstelement.h:
	  reserve space for initiate_state_change

2004-01-15  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/autoplug/gstspideridentity.c:
	(gst_spider_identity_sink_loop_type_finding):
	  break infinite loop by just returning instead of looping
	* gst/gstclock.c: (gst_clock_class_init), (gst_clock_set_property):
	  set event time difference correctly. Set it to 1 second instead
	  of 100ms to be more tolerant